fix extra long title overflow and update docs

--- a/static/css/normalize.css
+++ b/static/css/normalize.css
@@ -349,6 +349,10 @@ a {
   text-decoration: underline;
 }
 
+.entry-title {
+  word-wrap: break-word;
+}
+
 .entry-title a {
   text-decoration: none;
 }
