--- a/style-rtl.css
+++ b/style-rtl.css
@@ -349,6 +349,10 @@ a {
   text-decoration: none;
 }
 
+.entry-title {
+  word-wrap: break-word;
+}
+
 .entry-content a,
 .comment-content a,
 .textwidget a {
